# mail-in

./: Dockerfile  README.md  config.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
backend/: README.md  pyproject.toml
backend/.devcontainer/: devcontainer.json
backend/mail-in-venv/: pyvenv.cfg
backend/src/mail_in/: _version.py  dependencies.py  main.py
backend/src/mail_in/spreadsheet/: create_spreadsheet.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  bufferInfo.tsx  holder.tsx  holderDiagram.tsx  holderInfo.tsx  mailInStore.ts  sampleInfo.tsx  types.ts  user.tsx  userInfo.tsx
src/mail_in/: _version.py  dependencies.py  main.py  utils.py
src/mail_in/utils/: utils.py
