[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mail_in"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
description = "mail in validation"
dependencies = [
    "typing-extensions;python_version<'3.9'",
    "click",
    "fastapi",
    "pydantic",
    "pandas"

] # Add project dependencies here, e.g. ["click", "numpy"]
dynamic = ["version"]
license.file = "LICENSE"
readme = "README.rst"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "flake8-isort",
    "Flake8-pyproject",
]

[project.scripts]
mail_in = "mail_in.__main__:main"

[project.urls]
GitHub = "https://github.com/tizayi/mail_in"

[[project.authors]] # Further authors may be added by duplicating this section
email = "tizayi0@gmail.com"
name = "tizayi"

[tool.setuptools_scm]
write_to = "src/mail_in/_version.py"

[tool.mypy]
ignore_missing_imports = true # Ignore missing stubs in imported modules
plugins = "numpy.typing.mypy_plugin"

[tool.isort]
float_to_top = true
profile = "black"

[tool.flake8]
extend-ignore = [
    "E203", # See https://github.com/PyCQA/pycodestyle/issues/373
    "F811", # support typing.overload decorator
    "F722", # allow Annotated[typ, some_func("some string")]
]

max-line-length = 88 # Respect black's line length (default 88),
exclude = [".tox", "venv"]