[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "1"
name = "mail_in"
dependencies = [
    "typing-extensions;python_version<'3.9'",
    "click",
    "fastapi",
    "pydantic",
    "pandas",
    "uvicorn[standard]"

] 

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "flake8-isort",
    "Flake8-pyproject",
]

[project.scripts]
mail_in = "mail_in.__main__:main"
